[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Title Screen.png" type="Texture" id=4]
[ext_resource path="res://UI/TitleScreenTheme.tres" type="Theme" id=5]
[ext_resource path="res://Sparkles.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.5
glow_strength = 1.01
glow_bloom = 0.1
glow_blend_mode = 0
glow_hdr_threshold = 0.85

[sub_resource type="Animation" id=2]
resource_name = "Glow"
length = 1.8
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:glow_strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.6, 0.7, 0.8, 0.9, 0.8, 0.7, 0.6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WorldEnvironment:environment:glow_strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.01 ]
}

[node name="StartMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="TitleScreen" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 106.0
margin_right = 640.0
margin_bottom = 146.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 15
alignment = 1

[node name="StartButton" type="Button" parent="HBoxContainer"]
margin_left = 155.0
margin_right = 255.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
custom_constants/hseparation = 0
text = "Start"

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
margin_left = 270.0
margin_right = 370.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Settings"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
margin_left = 385.0
margin_right = 485.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Quit"

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 320.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
text = "a game by jmes"
align = 1

[node name="Glow" type="AnimationPlayer" parent="."]
autoplay = "Glow"
anims/Glow = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Sparkles" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
